# utils

./: .gitignore  alice-no-zdc.dot  gdml-to-dot.py  gdml-volumes.py
celer-geant/: CMakeLists.txt  README.md  celer-geant.cc  example-input.json  th1d_compare.C  th1d_replicas_compare.C  th2d_plot.C
celer-geant/src/: ActionInitialization.cc  ActionInitialization.hh  DetectorConstruction.cc  DetectorConstruction.hh  EventAction.cc  EventAction.hh  JsonReader.cc  JsonReader.hh  MakeCelerOptions.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  RootDataStore.cc  RootDataStore.hh  RootIO.cc  RootIO.hh  RunAction.cc  RunAction.hh  SensitiveDetector.cc  SensitiveDetector.hh  StackingAction.cc  StackingAction.hh
g4-raytracer/: CMakeLists.txt  README.md  main.cc  vis.mac
g4-raytracer/src/: DetectorConstruction.cc  DetectorConstruction.hh
gdml-generator/: CMakeLists.txt  README.md  gdml-gen.cc  plot.py
gdml-generator/src/: Box.cc  Box.hh  BoxDetector.cc  BoxDetector.hh  FourSteelSlabs.cc  FourSteelSlabs.hh  MucfBox.cc  MucfBox.hh  MucfTestGeo.cc  MucfTestGeo.hh  NotionalJUNO.cc  NotionalJUNO.hh  OpticalBoxes.cc  OpticalBoxes.hh  OpticalDetector.cc  OpticalDetector.hh  OpticalPrism.cc  OpticalPrism.hh  SegmentedSimpleCms.cc  SegmentedSimpleCms.hh  SegmentedSimpleCmsDetector.cc  SegmentedSimpleCmsDetector.hh  SimpleCMSDetector.cc  SimpleCMSDetector.hh  SimpleCms.cc  SimpleCms.hh  SimpleCmsDetector.hh  SimpleLZ.cc  SimpleLZ.hh  TestEm3.cc  TestEm3.hh  TestEm3Detector.cc  TestEm3Detector.hh  ThinSlab.cc  ThinSlab.hh  ThinSlabDetector.cc  ThinSlabDetector.hh
gdml-generator/src/core/: PhysicsList.cc  PhysicsList.hh  SensitiveDetector.cc  SensitiveDetector.hh
gdml-query/: boolsolids-to-dot.py  gdml-to-dot.py  gdml-volumes.py  gdmlutils.py
gdml-subset/: CMakeLists.txt  gdml-subset.cc
geant4-validation-app/: .gitignore  CMakeLists.txt  README.md  g4-app.cc  input-example.json  input_example.json  vis.mac
geant4-validation-app/src/: ActionInitialization.cc  ActionInitialization.hh  BremsstrahlungProcess.cc  BremsstrahlungProcess.hh  Celeritas.cc  Celeritas.hh  DetectorConstruction.cc  DetectorConstruction.hh  EventAction.cc  EventAction.hh  G4appMacros.hh  Geant4Run.cc  Geant4Run.hh  HepMC3Reader.cc  HepMC3Reader.hh  JsonReader.cc  JsonReader.hh  PhysicsList.cc  PhysicsList.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  RootData.hh  RootIO.hh  RootIO.root.cc  RootInterfaceLinkDef.hh  RootUniquePtr.hh  RootUniquePtr.root.cc  RunAction.cc  RunAction.hh  SensitiveDetector.cc  SensitiveDetector.hh  SteppingAction.cc  SteppingAction.hh  Stopwatch.cc  Stopwatch.hh  TrackingAction.cc  TrackingAction.hh
geant4-validation-app/utils/: ProgressIndicator.hh  ValidationGlobals.hh  ValidationGlobalsHelper.hh  ValidationHelper.hh  diagnostics.C  mctruth_comparison.C  plot_celeritas_output.ipynb  plot_cumulative_z.C  post_process_celeritas.C  read_celeritas_output.C  read_celeritas_output.ipynb  read_events.C  steps_per_track.C  validation.C
geometry-validation/: README.md
geometry-validation/g4app/: CMakeLists.txt  README.md  compare_geometries.sh  g4app.cc
geometry-validation/g4app/src/: Data.hh  DetectorConstruction.cc  DetectorConstruction.hh  GeometryStore.cc  GeometryStore.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh
geometry-validation/verify_gdml/: CMakeLists.txt  README.md  verify-gdml.cc
geometry-validation/verify_gdml/src/: DetectorConstruction.cc  DetectorConstruction.hh  GeometryData.hh  GeometryStore.cc  GeometryStore.hh
geometry-validation/vgapp/: CMakeLists.txt  README.md  vgapp.cc
hepmc3-generator/: .gitignore  CMakeLists.txt  README.md  hepmc3-gen.cc
hepmc3-generator/src/: Hepevt.hh
lz-export/: .gitignore  CMakeLists.txt  export-lz.cc  lz.json
prng/: jump-matrices.txt  jump-polys.txt  xorwow-jump.py
rng/: xorwow-jump-matrices.py  xorwow-jump.py
